style.css
:root {
  --font-family-headings: "aribau", "serif";
  --font-family-text: "aribau regular", "serif";
  --primary-color: #bf125d;
  --secondary-color: #047481;
}

@font-face {
  font-family: "aribau";
  src: url("/aribau-grotesk-black.otf");
}
@font-face {
  font-family: "aribau regular";
  src: url("/AribauGrotesk-Regular.ttf");
}
/*section-1  body background, logo and navbar*/
body {
  background: linear-gradient(
    20deg,
    rgba(222, 226, 230, 1) 11%,
    rgba(171, 213, 219, 1) 32%,
    rgba(222, 226, 230, 1) 50%,
    rgba(171, 213, 219, 1) 66%,
    rgba(222, 226, 230, 1) 100%
  );
  background-repeat: no-repeat;
}
.my-logo {
  font-family: var(--font-family-headings);
  font-size: 30px;
  margin-left: 35px;
  transition: all 0.5s ease-in-out;
}
.my-logo:hover {
  color: var(--primary-color);
}
.paw {
  font-size: 13px;
}
.nav-item a {
  color: black;
  font-family: var(--font-family-headings);
}
.nav-item a:hover {
  color: var(--secondary-color);
}
/*section-2 about me and illustration*/
.about-me-info {
  margin-top: 60px;
}
.about-me-info h1,
h3 {
  font-family: var(--font-family-headings);
  line-height: 3.3rem;
}
h1 {
  font-size: 57px;
  letter-spacing: -2px;
}
.about-me-p {
  font-family: var(--font-family-text);
  width: 600px;
}
.illustration-img {
  width: 430px;
  height: 430px;
  margin-top: 24px;
}
.icons i {
  font-size: 30px;
  color: var(--primary-color);
  margin-right: 13px;
  transition: 0.5s ease-in-out;
}
.icons i:hover {
  color: black;
  transform: translateY(-3px);
}
/* Section-3 Projects*/

.projects-section-total {
  margin-top: 100px;
}
.row-projects-section-total {
  padding: 10px;
}
.section-heading {
  font-family: var(--font-family-headings);
}

.cyberdelics-web-img {
  width: 500px;
  height: 255px;
  border-radius: 5px;
}
h2.project-headers {
  font-family: var(--font-family-headings);
  font-size: 43px;
  letter-spacing: -2px;
  margin-top: -10px;
}
p.paragraph {
  font-family: var(--font-family-text);
}
.icons-container {
  display: flex;
  gap: 13;
}
.icons-container i {
  font-size: 35px;
  margin-right: 20px;
}

.github-project-link i {
  color: black;
  box-shadow: 0 0 26px 4px var(--secondary-color);
  border-radius: 100%;
  transition: 0.5s ease-in-out;
}
.github-project-link i:hover {
  transform: translateY(-3px);
}

.btn-primary {
  background-color: #0842cb !important;
  border: none;
}
.btn-primary:hover {
  box-shadow: 0 0 10px 5px plum;
}
a.launch-button {
  color: white;
  font-family: var(--font-family-text);
  text-decoration: none;
  text-align: center;
}

.weather-app-info-total {
  padding-left: 50px;
}
.weather-app-header {
  font-family: var(--font-family-headings);
  font-size: 43px;
  letter-spacing: -2px;
  margin-top: -20px;
}
.weather-app-img {
  width: 540px;
  height: 320px;
  border-radius: 5px;
}
.plane-illustration {
  width: 300px;
  height: 170px;
}
.origami-row {
  margin-top: -80px;
}

/*certificates section*/

.success-illustration {
  width: 210px;
  height: 210px;
  margin-bottom: 20px;
}
.card-img-top {
  border-radius: 5px;
}

/*Contact Section*/
.contact-header {
  font-family: var(--font-family-headings);
}
.contact-section-total {
  margin-top: 100px;
}
.my-pic {
  width: 330px;
  height: 360px;
  border-radius: 100%;
  padding-right: 5px;
  padding-bottom: 5px;
}
.contact-icons {
  margin-top: 25px;
}
.mail-link,
.address,
.phone-number {
  text-decoration: none;
  font-size: 17px;
  color: var(--primary-color);
  font-family: var(--font-family-text);
}
.address {
  margin-top: 33px;
}
/*footer*/
footer {
  position: relative;
  bottom: -20px;
}
.github-icon-footer {
  font-size: 20px;
  margin-top: -4px;
}
.footer-content {
  font-family: var(--font-family-headings);
  letter-spacing: -0.9px;
}
/* Media Query */
@media (max-width: 913px) {
  .my-logo {
    margin-left: 0;
  }
  .nav-item a {
    color: var(--primary-color);
  }
  .navbar-toggler {
    font-size: 10px;
    border: 1px solid white;
  }
  .about-container-total {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .about-me-info {
    margin: 0 20px;
  }
  h1.my-name {
    font-size: 35px;
  }
  h3.my-profession {
    font-size: 23px;
  }
  h1.my-name,
  h3.my-profession {
    line-height: 1.7rem;
    letter-spacing: -0.07rem;
  }
  .about-me-p {
    width: 100%;
    margin-top: 10px;
  }
  .icons a i {
    font-size: 26px;
  }
  .illustration-img {
    width: 200px;
    height: 200px;
    display: block;
    margin: 45px auto;
  }
  .section-heading {
    text-align: center;
    font-size: 40px;
  }
  h2.project-headers {
    font-size: 35px;
  }
  .icons-container i {
    font-size: 27px;
  }
  .cyberdelics-web-img {
    margin-top: -50px;
  }
  .cyberdelics-info-container {
    margin-top: 35px;
  }
  .weather-app-info-total {
    margin-left: -33px;
  }
  .weather-app-img {
    margin-top: 37px;
  }
  .origami-project-img-container {
    margin-top: 35px;
  }
  .origami-info-container {
    margin-top: 35px;
  }
  .certificates-header {
    margin-top: 30px;
  }
  /*.certificates-row {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 13px;
    margin-top: 30px;
    padding: 10px;
  }*/
  .illustration-for-project {
    display: none;
  }
  .contact-header {
    font-family: var(--font-family-headings);
    text-align: center;
  }
}
@media (min-width: 768px) and (max-width: 912px) {
  .cyberdelics-info-container,
  .origami-info-container {
    margin-top: -35px;
  }
}
@media (min-width: 1000px) {
  .about-me-info {
    margin-left: 40px;
  }
  h2.my-name {
    font-size: 40px;
  }
  h3.my-profession {
    font-size: 25px;
    letter-spacing: -0.1rem;
  }
  h2.my-name,
  h3.my-profession {
    line-height: 1.8rem;
  }
  .illustration-img {
    width: 360px;
    height: 360px;
  }
  .girl-dog-illustration {
    width: 300px;
    height: 130px;
  }
}

